statisztika is működik

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,6 +57,12 @@ nav {
     flex-direction: row;
 }
 
+@media (max-width: 1024px) {
+    .input-form {
+        flex-direction: column;
+    }
+}
+
 .fuel-form-container form {
     display: flex;
     flex-direction: column;
